<resources>
    <string name="app_name">Saviskara</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="title_activity_splashscreen">Splashscreen</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="technical">Technical</string>
    <string name="cultural">Cultural</string>
    <string name="recreational">recreational</string>
    <string name="saviskara">Saviskara</string>
    <string name="name">Name</string>
    <string name="err_msg_name">Enter Full Name</string>
    <string name="err_msg_email">Enter a Valid Email Address</string>
    <string name="email">Email</string>
    <string name="srn_usn">SRN/USN</string>
    <string name="event_name">Event Name</string>
    <string name="university_college">University/College</string>
    <string name="submit">Proceed To Pay</string>
    <string name="title">Title</string>
    <string name="reg_amount">Reg. Amount :</string>
    <string name="prize">Prize :</string>
    <string name="contact_no_whatsapp">Contact No. (Whatsapp)</string>
    <string name="registration_amount">Registration Amount</string>
    <string name="saviskaara">Saviskaara</string>
    <string name="faq">FAQ</string>
    <string name="communicate">Communicate</string>
    <string name="contact_us">Contact Us</string>
    <string name="visit_our_website">Visit our Website</string>
    <string name="disclaimer">For Rules Visit Our Website.</string>
    <string name="click_here_to_go_to_website">Click Here To Go To Website</string>
    <string name="emailUs">Email Us</string>
    <string name="tap_to_register">Tap to Register.</string>
    <string name="go_to_website">Go To Website</string>
    <string name="hint_call">tap to call</string>
    <string name="ScanToPay">To Pay Scan QR Code In PAYTM App.</string>
    <string name="or">OR</string>

</resources>
