<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_About"
            android:icon="@drawable/info"
            android:title="@string/saviskaara" />
        <item
            android:id="@+id/nav_Faq"
            android:icon="@drawable/faq"
            android:title="@string/faq" />
        <item
            android:id="@+id/nav_Venue"
            android:icon="@drawable/venue"
            android:title="@string/venue_and_time" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_ContactUs"
                android:icon="@drawable/contact"
                android:title="@string/contact_us" />
            <item
                android:id="@+id/nav_VisitWeb"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/visit_our_website" />
            <item
                android:id="@+id/nav_Query"
                android:icon="@drawable/query"
                android:title="Specific Query" />
        </menu>
    </item>

</menu>
