<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/inhouse1"
    android:orientation="vertical"
    android:padding="16dp">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="45dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/buttonstyle"
        android:onClick="gotoTechnical"
        android:padding="8dp"
        android:text="@string/technical"
        android:textColor="#f5f5f5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:background="@drawable/buttonstyle"
        android:onClick="gotoCultural"
        android:padding="8dp"
        android:text="@string/cultural"
        android:textColor="#f5f5f5" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:background="@drawable/buttonstyle"
        android:onClick="gotoRecreational"
        android:padding="8dp"
        android:text="@string/recreational"
        android:textColor="#f5f5f5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:text="@string/disclaimer"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="italic" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:onClick="webbutton2"
        android:text="@string/click_here_to_go_to_website"
        android:textColor="#ffffff"
        android:textSize="16sp"
        android:textStyle="bold"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:onClick="query"
        android:text="@string/SpecificQuery"
        android:textColor="#ffffff"
        android:textSize="18sp"
        android:textStyle="bold"
        />
</LinearLayout>