<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cultCard"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:focusable="auto"
    android:foreground="?selectableItemBackground"
    card_view:cardBackgroundColor="#212121"
    card_view:cardCornerRadius="8dp"
    card_view:cardElevation="3dp"
    card_view:contentPadding="4dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">
        <TextView
            android:id="@+id/CTittle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/CDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@id/CTittle"
            android:layout_marginBottom="8dp"
            android:textColor="#FAFAFA"
            android:textSize="16sp"
            android:textStyle="italic" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/CDesc"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/reg_amount"
                android:textColor="#FAFAFA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/Creg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="40dp"
                android:textColor="#FAFAFA"
                android:textSize="16sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:text="@string/prize"
                android:textColor="#FAFAFA"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/CPrize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FAFAFA"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/linearLayout2"
            android:layout_gravity="bottom"
            android:text="@string/tap_to_register"
            android:textColor="#ffffff"
            android:textSize="13sp" />
    </RelativeLayout>
</android.support.v7.widget.CardView>